# computer_graphics

./: .github-ci.yml  .gitmodules  CMakeLists.txt  main.cpp  triangle.cpp  volume.cpp  window.cpp
.github/workflows/: build.yml
controls/: controls.cpp  controls.hpp
objloader/: objloader.cpp  objloader.hpp
shader/: enemy_vertex_shader  fireball_fragment_shader  fireball_vertex_shader  fragment_shader  fragment_shader_1  fragment_shader_2  shader.cpp  shader.hpp  vertex_shader  vertex_shader_2
texture/: texture.cpp  texture.hpp
